--- a/index.html
+++ b/index.html
@@ -15,11 +15,22 @@
         <h1 class="heading-primary">Authentic African meals delivered fresh, every single day</h1>
         <p class="hero-description">
           The African-inspired food subscription that fuels your lifestyle with vibrant flavors and balanced nutrition.
-          Tailored to your taste, freshly cooked with love, and delivered daily. Last year alone, we served over
-          50,000 meals and 20,000 happy customers serving meals across our cities!
+          Tailored to your taste, freshly cooked with love and delivered daily.
         </p>
         <a href="#" class="btn btn--full margin-right-sm">Start eating well</a>
         <a href="#" class="btn btn--outline">Learn More &darr;</a>
+        <div class="delivered-meals">
+          <div class="delivered-img">
+            <img src="img/customers/1.jpg" alt="Customer photo">
+            <img src="img/customers/2.jpg" alt="Customer photo">
+            <img src="img/customers/3.jpg" alt="Customer photo">
+            <img src="img/customers/4.jpg" alt="Customer photo">
+            <img src="img/customers/5.jpg" alt="Customer photo">
+            <img src="img/customers/6.jpg" alt="Customer photo">
+          </div>
+          <span class="delivered-text">
+            <span> 50,000 +</span> meals and <span>20,000</span> happy customers </p>
+        </div>
       </div>
       <div class="hero-img-box">
         <img src="img/hero.png" alt="some meals images from afribite" class="hero-img">
