added navigation section

--- a/index.html
+++ b/index.html
@@ -9,35 +9,65 @@
 </head>
 
 <body>
-  <section class="section-hero">
-    <div class="hero">
-      <div class="hero-text-box">
-        <h1 class="heading-primary">Authentic African meals delivered fresh, every single day</h1>
-        <p class="hero-description">
-          The African-inspired food subscription that fuels your lifestyle with vibrant flavors and balanced nutrition.
-          Tailored to your taste, freshly cooked with love and delivered daily.
-        </p>
-        <a href="#" class="btn btn--full margin-right-sm">Start eating well</a>
-        <a href="#" class="btn btn--outline">Learn More &darr;</a>
-        <div class="delivered-meals">
-          <div class="delivered-img">
-            <img src="img/customers/1.jpg" alt="Customer photo">
-            <img src="img/customers/2.jpg" alt="Customer photo">
-            <img src="img/customers/3.jpg" alt="Customer photo">
-            <img src="img/customers/4.jpg" alt="Customer photo">
-            <img src="img/customers/5.jpg" alt="Customer photo">
-            <img src="img/customers/6.jpg" alt="Customer photo">
+  <header class="header">
+
+    <img src="img/Afribite logo.png" alt="AfriBite logo" class="logo">
+    <nav class="main-nav">
+      <ul class="main-nav-list">
+        <li><a href="#" class="main-nav-link">Home</a></li>
+        <li><a href="#" class="main-nav-link">About</a></li>
+        <li><a href="#" class="main-nav-link">How it works</a></li>
+        <li><a href="#" class="main-nav-link">Meals</a></li>
+        <li><a href="#" class="main-nav-link">Testimonials</a></li>
+        <li><a href="#" class="main-nav-link">Pricing</a></li>
+        <li><a href="#" class="main-nav-link nav-cta">Contact</a></li>
+      </ul>
+    </nav>
+
+  </header>
+  <main>
+
+
+    <section class="section-hero">
+      <div class="hero">
+        <div class="hero-text-box">
+          <h1 class="heading-primary">Authentic African meals delivered fresh, every single day</h1>
+          <p class="hero-description">
+            The African-inspired food subscription that fuels your lifestyle with vibrant flavors and balanced
+            nutrition.
+            Tailored to your taste, freshly cooked with love and delivered daily.
+          </p>
+          <a href="#" class="btn btn--full margin-right-sm">Start eating well</a>
+          <a href="#" class="btn btn--outline">Learn More &darr;</a>
+          <div class="delivered-meals">
+            <div class="delivered-img">
+              <img src="img/customers/1.jpg" alt="Customer photo">
+              <img src="img/customers/2.jpg" alt="Customer photo">
+              <img src="img/customers/3.jpg" alt="Customer photo">
+              <img src="img/customers/4.jpg" alt="Customer photo">
+              <img src="img/customers/5.jpg" alt="Customer photo">
+              <img src="img/customers/6.jpg" alt="Customer photo">
+            </div>
+            <span class="delivered-text">
+              <p> <span> 50,000 +</span> meals and <span>20,000</span> happy customers </p>
           </div>
-          <span class="delivered-text">
-            <span> 50,000 +</span> meals and <span>20,000</span> happy customers </p>
+        </div>
+        <div class="hero-img-box">
+          <img src="img/hero.png" alt="some meals images from afribite" class="hero-img">
         </div>
       </div>
-      <div class="hero-img-box">
-        <img src="img/hero.png" alt="some meals images from afribite" class="hero-img">
+    </section>
+    <section class="section-how ">
+      <div class="grid grid--2-cols container">
+        <div>test 1</div>
+        <div>test 1</div>
+        <div>test 1</div>
+        <div>test 1</div>
       </div>
-    </div>
-  </section>
+    </section>
 
+  </main>
+  </main>
 </body>
 
 </html>
