--- a/index.html
+++ b/index.html
@@ -58,11 +58,56 @@
       </div>
     </section>
     <section class="section-how ">
-      <div class="grid grid--2-cols container">
-        <div>test 1</div>
-        <div>test 1</div>
-        <div>test 1</div>
-        <div>test 1</div>
+      <div class=" container">
+        <span class="subheading">How it works</span>
+        <h2 class="heading-secondary">
+          Your daily taste of Africa in 3 simple steps
+        </h2>
+      </div>
+      <div class="container grid .grid--2-cols">
+        <!-- Step 01 -->
+        <div class="step-text-box">
+          <p class="step-number">01</p>
+          <h3 class="heading-tertiary">Tell us what you like(and what not)</h3>
+          <p class="step-description">
+            Never again waste time thinking about what to eat! Afribite will create a 100% personalized weekly
+            meal plan just for you. It makes sure you get all the nutrients and vitamins you need, no matter what
+            diet you follow!
+          </p>
+
+        </div>
+
+        <div class="step-img-box">
+          <img src="img/App/Midnight.png" alt="iphone app references selection screen" class="step-img">
+        </div>
+        <!-- STEP 02 -->
+        <div class="step-img-box">
+          <img src="img/App/Midnight.png" alt="iphone app references selection screen" class="step-img">
+        </div>
+        <div class="step-text-box">
+          <p class="step-number">01</p>
+          <h3 class="heading-tertiary">Tell us what you like(and what not)</h3>
+          <p class="step-description">
+            Never again waste time thinking about what to eat! Afribite will create a 100% personalized weekly
+            meal plan just for you. It makes sure you get all the nutrients and vitamins you need, no matter what
+            diet you follow!
+          </p>
+
+        </div>
+        <!-- STEP 03 -->
+        <div class="step-text-box">
+          <p class="step-number">01</p>
+          <h3 class="heading-tertiary">Tell us what you like(and what not)</h3>
+          <p class="step-description">
+            Never again waste time thinking about what to eat! Afribite will create a 100% personalized weekly
+            meal plan just for you. It makes sure you get all the nutrients and vitamins you need, no matter what
+            diet you follow!
+          </p>
+
+        </div>
+        <div class="step-img-box">
+          <img src="img/App/Midnight.png" alt="iphone app references selection screen" class="step-img">
+        </div>
       </div>
     </section>
 
