--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/general.css">
   <title>AfriBite</title>
 </head>
 
@@ -64,7 +65,7 @@
           Your daily taste of Africa in 3 simple steps
         </h2>
       </div>
-      <div class="container grid .grid--2-cols">
+      <div class="container grid .grid--2-cols grid--center-v">
         <!-- Step 01 -->
         <div class="step-text-box">
           <p class="step-number">01</p>
@@ -81,9 +82,7 @@
           <img src="img/App/Midnight.png" alt="iphone app references selection screen" class="step-img">
         </div>
         <!-- STEP 02 -->
-        <div class="step-img-box">
-          <img src="img/App/Midnight.png" alt="iphone app references selection screen" class="step-img">
-        </div>
+
         <div class="step-text-box">
           <p class="step-number">02</p>
           <h3 class="heading-tertiary">Tell us what you like(and what not)</h3>
@@ -93,6 +92,9 @@
             diet you follow!
           </p>
 
+        </div>
+        <div class="step-img-box">
+          <img src="img/App/Midnight.png" alt="iphone app references selection screen" class="step-img">
         </div>
         <!-- STEP 03 -->
         <div class="step-text-box">
