--- a/index.html
+++ b/index.html
@@ -126,9 +126,36 @@
         </div>
       </div>
     </section>
+    <section class="section-meals">
+      <div class="container">
+        <span class="subheading">Meals</span>
+        <h2 class="heading-secondary">
+          Afrifood AI chooses from 3,000+ recipes
+        </h2>
+      </div>
+      <div class="container grid grid--3-cols">
+        <div class="meal">
+          <img src="img/meals/meal-1.jpg" alt="food" class="meal-img">
+          <span class="tag">Vegetarian</span>
+          <p class="meal-title">Jollof Rice</p>
+          <ul class="meal-attributes">
+            <li class="meal-attribute"><ion-icon name="flame-outline"></ion-icon> <span>650 calories</span></li>
+            <li class="meal-attribute"><ion-icon name="restaurant-outline"></ion-icon> <span>NutriScore &reg; 74</span>
+            </li>
+            <li class="meal-attribute"><ion-icon name="star-outline"></ion-icon> <span>4.9 rating (537)</span></li>
+
+          </ul>
+        </div>
+        <div class="meal">Meals</div>
+        <div class="list">List of diet</div>
+
+      </div>
+    </section>
 
   </main>
   </main>
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
