--- a/index.html
+++ b/index.html
@@ -139,10 +139,16 @@
           <span class="tag">Vegetarian</span>
           <p class="meal-title">Jollof Rice</p>
           <ul class="meal-attributes">
-            <li class="meal-attribute"><ion-icon name="flame-outline"></ion-icon> <span>650 calories</span></li>
-            <li class="meal-attribute"><ion-icon name="restaurant-outline"></ion-icon> <span>NutriScore &reg; 74</span>
+            <li class="meal-attribute"><ion-icon class="meal-icon" name="flame-outline"></ion-icon>
+              <span><strong>650</strong>
+                calories</span>
             </li>
-            <li class="meal-attribute"><ion-icon name="star-outline"></ion-icon> <span>4.9 rating (537)</span></li>
+            <li class="meal-attribute"><ion-icon class="meal-icon" name="restaurant-outline"></ion-icon>
+              <span>NutriScore &reg; <strong>74</strong></span>
+            </li>
+            <li class="meal-attribute"><ion-icon class="meal-icon" name="star-outline"></ion-icon> <span><strong>4.9
+                </strong>rating
+                (537)</span></li>
 
           </ul>
         </div>
