--- a/index.html
+++ b/index.html
@@ -127,34 +127,85 @@
       </div>
     </section>
     <section class="section-meals">
-      <div class="container">
+      <div class="container center-text">
         <span class="subheading">Meals</span>
         <h2 class="heading-secondary">
           Afrifood AI chooses from 3,000+ recipes
         </h2>
       </div>
-      <div class="container grid grid--3-cols">
+      <div class="container grid grid--3-cols margin-bottom-md">
         <div class="meal">
           <img src="img/meals/meal-1.jpg" alt="food" class="meal-img">
-          <span class="tag">Vegetarian</span>
-          <p class="meal-title">Jollof Rice</p>
-          <ul class="meal-attributes">
-            <li class="meal-attribute"><ion-icon class="meal-icon" name="flame-outline"></ion-icon>
-              <span><strong>650</strong>
-                calories</span>
+          <div class="meal-content">
+            <div class="meal-tags">
+              <span class="tag">Vegetarian</span>
+            </div>
+            <p class="meal-title">Jollof Rice</p>
+            <ul class="meal-attributes">
+              <li class="meal-attribute"><ion-icon class="meal-icon" name="flame-outline"></ion-icon>
+                <span><strong>400</strong>
+                  calories</span>
+              </li>
+              <li class="meal-attribute"><ion-icon class="meal-icon" name="restaurant-outline"></ion-icon>
+                <span>NutriScore &reg; <strong>74</strong></span>
+              </li>
+              <li class="meal-attribute"><ion-icon class="meal-icon" name="star-outline"></ion-icon> <span><strong>4.9
+                  </strong>rating
+                  (537)</span></li>
+
+            </ul>
+          </div>
+        </div>
+        <div class="meal">
+          <img src="img/meals/meal-2.jpg" alt="food" class="meal-img">
+          <div class="meal-content">
+            <div class="meal-tags">
+              <span class="tag">Vegetarian</span>
+              <span class="tag tag--paleo">Paleo</span>
+            </div>
+            <p class="meal-title">White Rice</p>
+            <ul class="meal-attributes">
+              <li class="meal-attribute"><ion-icon class="meal-icon" name="flame-outline"></ion-icon>
+                <span><strong>400</strong>
+                  calories</span>
+              </li>
+              <li class="meal-attribute"><ion-icon class="meal-icon" name="restaurant-outline"></ion-icon>
+                <span>NutriScore &reg; <strong>92</strong></span>
+              </li>
+              <li class="meal-attribute"><ion-icon class="meal-icon" name="star-outline"></ion-icon> <span><strong>4.9
+                  </strong>rating
+                  (537)</span></li>
+
+            </ul>
+          </div>
+        </div>
+        <div class="diet">
+          <h3 class="heading-tertiary">Works with any diet:</h3>
+          <ul class="list">
+            <li class="list-item"><ion-icon class="list-icon"
+                name="checkmark-outline"></ion-icon><span>Vegitarian</span></li>
+            <li class="list-item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Vegan</li>
+            <li class="list-item"><ion-icon class="list-icon"
+                name="checkmark-outline"></ion-icon><span>Pescatarian</span></li>
+            <li class="list-item"><ion-icon class="list-icon"
+                name="checkmark-outline"></ion-icon><span>Gluten-Free</span></li>
+            <li class="list-item"><ion-icon class="list-icon"
+                name="checkmark-outline"></ion-icon><span>Lactose-Free</span></li>
+            <li class="list-item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Keto</span></li>
+            <li class="list-item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Paleo</span>
             </li>
-            <li class="meal-attribute"><ion-icon class="meal-icon" name="restaurant-outline"></ion-icon>
-              <span>NutriScore &reg; <strong>74</strong></span>
-            </li>
-            <li class="meal-attribute"><ion-icon class="meal-icon" name="star-outline"></ion-icon> <span><strong>4.9
-                </strong>rating
-                (537)</span></li>
+            <li class="list-item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Low
+                FODMAP</span></li>
+            <li class="list-item"><ion-icon class="list-icon"
+                name="checkmark-outline"></ion-icon><span>Kid-Friendly</span></li>
+
 
           </ul>
         </div>
-        <div class="meal">Meals</div>
-        <div class="list">List of diet</div>
 
+      </div>
+      <div class="container all-recipes">
+        <a href="#" class="link">See all recipes &rarr;</a>
       </div>
     </section>
 
