--- a/index.html
+++ b/index.html
@@ -208,9 +208,107 @@
         <a href="#" class="link">See all recipes &rarr;</a>
       </div>
     </section>
+    <section class="section-testimonials">
+      <div class="testimonials-container">
+        <span class="subheading">Testimonials</span>
+        <h2 class="heading-secondary">
+          Once you try it, you can't go back
+        </h2>
+
+        <div class="testimonials">
+
+          <figure class="testimonial">
+            <img class="testimonial-img" src="img/customers/1.jpg" alt="photo of customer">
+            <blockquote class="testimonial-text">
+              Inexpensive, healthy and great-tasting meals, without even having to order manually! It feels truly
+              magical.
+            </blockquote>
+            <p class="testimonial-name">
+
+              &mdash;(Dave Bryson)
+            </p>
+          </figure>
+          <figure class="testimonial">
+            <img class="testimonial-img" src="img/customers/2.jpg" alt="photo of customer">
+            <blockquote class="testimonial-text">
+              Inexpensive, healthy and great-tasting meals, without even having to order manually! It feels truly
+              magical.
+            </blockquote>
+            <p class="testimonial-name">
+
+              &mdash;(Dave Bryson)
+            </p>
+          </figure>
+          <figure class="testimonial">
+            <img class="testimonial-img" src="img/customers/3.jpg" alt="photo of customer">
+            <blockquote class="testimonial-text">
+              Inexpensive, healthy and great-tasting meals, without even having to order manually! It feels truly
+              magical.
+            </blockquote>
+            <p class="testimonial-name">
+
+              &mdash;(Dave Bryson)
+            </p>
+          </figure>
+          <figure class="testimonial">
+            <img class="testimonial-img" src="img/customers/4.jpg" alt="photo of customer">
+            <blockquote class="testimonial-text">
+              Inexpensive, healthy and great-tasting meals, without even having to order manually! It feels truly
+              magical.
+            </blockquote>
+            <p class="testimonial-name">
+
+              &mdash;(Dave Bryson)
+            </p>
+          </figure>
+        </div>
+      </div>
+      <div class="gallery">
+        <figure class="gallery-item">
+          <img src="img/gallary/1.jpg" alt="photo of food">
+        </figure>
+
+        <figure class="gallery-item">
+          <img src="img/gallary/2.jpg" alt="photo of food">
+        </figure>
+        <figure class="gallery-item">
+          <img src="img/gallary/3.jpg" alt="photo of food">
+        </figure>
+        <figure class="gallery-item">
+          <img src="img/gallary/4.jpg" alt="photo of food">
+        </figure>
+        <figure class="gallery-item">
+          <img src="img/gallary/5.jpg" alt="photo of food">
+        </figure>
+        <figure class="gallery-item">
+          <img src="img/gallary/6.jpg" alt="photo of food">
+        </figure>
+        <figure class="gallery-item">
+          <img src="img/gallary/7.jpg" alt="photo of food">
+        </figure>
+        <figure class="gallery-item">
+          <img src="img/gallary/8.jpg" alt="photo of food">
+        </figure>
+        <figure class="gallery-item">
+          <img src="img/gallary/9.jpg" alt="photo of food">
+        </figure>
+        <figure class="gallery-item">
+          <img src="img/gallary/10.jpg" alt="photo of food">
+        </figure>
+        <figure class="gallery-item">
+          <img src="img/gallary/11.jpg" alt="photo of food">
+        </figure>
+        <figure class="gallery-item">
+          <img src="img/gallary/12.jpg" alt="photo of food">
+        </figure>
+
+      </div>
+
+
+    </section>
 
   </main>
-  </main>
+
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
