--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
         </div>
       </div>
 
-      <div class="container grid">
+      <div class="container">
         <aside class="plan-details">
           Prices include all applicable taxes. You can cancel at any time. Both plans include the following:
         </aside>
@@ -408,6 +408,47 @@
           <p class="feature-text"> Going on holiday? Pause your plan, and we’ll adjust your subscription</p>
 
         </div>
+    </section>
+    <section class="section-cta">
+      <div class="container">
+        <div class="cta">
+
+
+          <div class="cta-text-box">
+            <h2 class="heading-secondary">Get Your First Meal For Free!</h2>
+            <p class="cta-text">Healthy, tasty and hassle-free meals are waiting for you. Start eating well today. You
+              can cancel or pause anytime. And the first meal is on us!</p>
+            <form class="cta-form" name="sign-up" netlify>
+              <div>
+                <label for="full-name">Full Name</label>
+                <input id="full-name" type="text" name="full-name" placeholder="Your name" required>
+              </div>
+
+              <div>
+                <label for="email">Email address</label>
+                <input id="email" type="email" name="email" placeholder="Your email" required>
+              </div>
+
+              <div>
+                <label for="select-where">Where did you hear from us?</label>
+                <select id="select-where" name="select-where">
+                  <option value="">Please choose one option:</option>
+                  <option value="friends">Friends and family</option>
+                  <option value="youtube">YouTube video</option>
+                  <option value="podcast">Podcast</option>
+                  <option value="ad">Facebook ad</option>
+                  <option value="others">Others</option>
+                </select>
+              </div>
+
+
+              <button class="btn btn--form">Sign up now</button>
+          </div>
+          <div class="cta-image-box" role="img" aria-label="men enjoying food">
+
+          </div>
+        </div>
+      </div>
     </section>
 
 
