--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
   <header class="header">
-
-    <img src="img/Afribite logo.png" alt="AfriBite logo" class="logo">
+    <a href="#">
+      <img src="img/Afribite logo.png" alt="AfriBite logo" class="logo"></a>
     <nav class="main-nav">
       <ul class="main-nav-list">
         <li><a href="#" class="main-nav-link">Home</a></li>
@@ -452,7 +452,80 @@
     </section>
 
 
+
   </main>
+
+  <footer class="footer">
+    <div class="container grid grid--5-cols">
+      <div class="logo-col">
+        <a href="#" class="footer-logo">
+          <img src="img/Afribite logo.png" alt="AfriBite logo" class="logo"></a>
+
+        <ul class="social-links">
+          <li>
+            <a class="footer-link" href="#">
+              <ion-icon class="social-icon" name="logo-instagram"></ion-icon>
+            </a>
+          </li>
+          <li>
+            <a class="footer-link" href="#">
+              <ion-icon class="social-icon" name="logo-facebook"></ion-icon>
+            </a>
+          </li>
+          <li>
+            <a class="footer-link" href="#">
+              <ion-icon class="social-icon" name="logo-twitter"></ion-icon>
+            </a>
+          </li>
+        </ul>
+
+        <p class="copyright">Copyright &copy; 2027 by AfriBite, Inc. All rights reserved</p>
+      </div>
+      <div class="adress-col">
+        <p class="footer-heading">
+        <address class="contacts">
+          <p>12 Wilkinson Road, Freetown, Sierra Leone </p>
+          <p><a href="tel:+232-76-123-456">+232-76-123-456</a> <br />
+            <a href="mailto:hello@afribite.com">hello@afribite.com</a>
+          </p>
+        </address>
+        </p>
+
+      </div>
+      <nav class="nav-col">
+        <p class="footer-heading">Account</p>
+        <ul class="footer-nav">
+          <li><a href="#">Create account</a></li>
+          <li><a href="#">Sign in</a></li>
+          <li><a href="#">IOS app</a></li>
+          <li><a href="#">Android app</a></li>
+
+
+        </ul>
+      </nav>
+      <nav class="nav-col">
+        <p class="footer-heading">Company</p>
+        <ul class="footer-nav">
+          <li><a href="#">About Afribite</a></li>
+          <li><a href="#">For Business</a></li>
+          <li><a href="#">Cooking partners</a></li>
+          <li><a href="#">Careers</a></li>
+        </ul>
+      </nav>
+      <nav class="nav-col">
+        <p class="footer-heading" Resources</p>
+        <ul class="footer-nav">
+          <li><a href="#">
+              Recipe directory</a></li>
+          <li><a href="#">Help center</a></li>
+          <li><a href="#">Privacy & terms/a></li>
+
+
+
+        </ul>
+      </nav>
+    </div>
+  </footer>
 
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
