footer second section

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           Your daily taste of Africa in 3 simple steps
         </h2>
       </div>
-      <div class="container grid .grid--2-cols grid--center-v">
+      <div class="container grid grid--2-cols grid--center-v">
         <!-- Step 01 -->
         <div class="step-text-box">
           <p class="step-number">01</p>
@@ -456,7 +456,7 @@
   </main>
 
   <footer class="footer">
-    <div class="container grid grid--5-cols">
+    <div class="container grid grid--footer">
       <div class="logo-col">
         <a href="#" class="footer-logo">
           <img src="img/Afribite logo.png" alt="AfriBite logo" class="logo"></a>
@@ -482,23 +482,23 @@
         <p class="copyright">Copyright &copy; 2027 by AfriBite, Inc. All rights reserved</p>
       </div>
       <div class="adress-col">
-        <p class="footer-heading">
+        <p class="footer-heading">Contact Us</p>
         <address class="contacts">
-          <p>12 Wilkinson Road, Freetown, Sierra Leone </p>
-          <p><a href="tel:+232-76-123-456">+232-76-123-456</a> <br />
-            <a href="mailto:hello@afribite.com">hello@afribite.com</a>
+          <p class="address">12 Wilkinson Road, Freetown, Sierra Leone </p>
+          <p><a class="footer-link" href="tel:+232-76-123-456">+232-76-123-456</a> <br />
+            <a class="footer-link" href="mailto:hello@afribite.com">hello@afribite.com</a>
           </p>
         </address>
-        </p>
+
 
       </div>
       <nav class="nav-col">
         <p class="footer-heading">Account</p>
         <ul class="footer-nav">
-          <li><a href="#">Create account</a></li>
-          <li><a href="#">Sign in</a></li>
-          <li><a href="#">IOS app</a></li>
-          <li><a href="#">Android app</a></li>
+          <li><a class="footer-link" href="#">Create account</a></li>
+          <li><a class="footer-link" href="#">Sign in</a></li>
+          <li><a class="footer-link" href="#">IOS app</a></li>
+          <li><a class="footer-link" href="#">Android app</a></li>
 
 
         </ul>
@@ -506,19 +506,18 @@
       <nav class="nav-col">
         <p class="footer-heading">Company</p>
         <ul class="footer-nav">
-          <li><a href="#">About Afribite</a></li>
-          <li><a href="#">For Business</a></li>
-          <li><a href="#">Cooking partners</a></li>
-          <li><a href="#">Careers</a></li>
+          <li><a class="footer-link" href="#">About Afribite</a></li>
+          <li><a class="footer-link" href="#">For Business</a></li>
+          <li><a class="footer-link" href="#">Cooking partners</a></li>
+          <li><a class="footer-link" href="#">Careers</a></li>
         </ul>
       </nav>
       <nav class="nav-col">
-        <p class="footer-heading" Resources</p>
+        <p class="footer-heading">Resources</p>
         <ul class="footer-nav">
-          <li><a href="#">
-              Recipe directory</a></li>
-          <li><a href="#">Help center</a></li>
-          <li><a href="#">Privacy & terms/a></li>
+          <li><a class="footer-link" href="#">Recipe directory</a></li>
+          <li><a class="footer-link" href="#">Help center</a></li>
+          <li><a class="footer-link" href="#">Privacy & terms</a></li>
 
 
 
