--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/general.css">
+  <link rel="stylesheet" href="css/queries.css">
   <title>AfriBite</title>
 </head>
 
 <body>
-  <header class="header">
+  <header class="header ">
     <a href="#">
       <img src="img/Afribite logo.png" alt="AfriBite logo" class="logo"></a>
     <nav class="main-nav">
@@ -24,6 +25,10 @@
         <li><a href="#" class="main-nav-link nav-cta">Contact</a></li>
       </ul>
     </nav>
+    <button class="btn-mobile-nav">
+      <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+      <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+    </button>
 
   </header>
   <main>
@@ -179,7 +184,7 @@
             </ul>
           </div>
         </div>
-        <div class="diet">
+        <div class="diets">
           <h3 class="heading-tertiary">Works with any diet:</h3>
           <ul class="list">
             <li class="list-item"><ion-icon class="list-icon"
@@ -481,7 +486,7 @@
 
         <p class="copyright">Copyright &copy; 2027 by AfriBite, Inc. All rights reserved</p>
       </div>
-      <div class="adress-col">
+      <div class="address-col">
         <p class="footer-heading">Contact Us</p>
         <address class="contacts">
           <p class="address">12 Wilkinson Road, Freetown, Sierra Leone </p>
