--- a/index.html
+++ b/index.html
@@ -471,6 +471,7 @@
 
 
               <button class="btn btn--form">Sign up now</button>
+            </form>
           </div>
           <div class="cta-image-box" role="img" aria-label="men enjoying food">
 
